@@ -4,6 +4,8 @@ import edu.austral.ingsis.clifford.structure.Directory;
 import edu.austral.ingsis.clifford.structure.Sorter;
 import edu.austral.ingsis.clifford.structure.SystemNode;
 
+import java.util.stream.Collectors;
+
 public class ListCommand implements Command {
 
   private final Directory dir;
@@ -23,8 +25,8 @@ public class ListCommand implements Command {
   public String execute() {
     String string =
         sorter != null
-            ? sorter.sort(dir.list()).stream().map(SystemNode::getName).toList().toString()
-            : dir.list().stream().map(SystemNode::getName).toList().toString();
+            ? sorter.sort(dir.list()).stream().map(SystemNode::getName).collect(Collectors.toList()).toString()
+            : dir.list().stream().map(SystemNode::getName).collect(Collectors.toList()).toString();
     return string.substring(1, string.length() - 1).replace(",", "");
   }
 }
